Fixed overflow/scrolling issue in casing pages.

--- a/src/app/casing/casing.component.css
+++ b/src/app/casing/casing.component.css
@@ -2,16 +2,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-}
-
-.dashboard-content {
-  height: calc(100% - 64px);
-}
-
-@media (max-width: 600px) {
-  .dashboard-content {
-    height: calc(100% - 56px);
-  }
+  overflow: hidden;
 }
 
 .project-button {
@@ -27,6 +18,10 @@
   justify-content: flex-end;
   max-width: 45%;
   padding-left: 16px;
+}
+
+.header {
+  min-height: 64px;
 }
 
 .title-bar {
