--- a/src/app/casing/store-casings/store-casings.component.css
+++ b/src/app/casing/store-casings/store-casings.component.css
@@ -1,3 +1,7 @@
+:host {
+  overflow: hidden;
+}
+
 .mat-action-row {
   justify-content: space-between;
 }
